# fluxconverter

./: .gitignore  api.py  cli.py  passgen - Shortcut.lnk  passgen.py  pyproject.toml  readme.txt
core/: runner.py  schema.py
fluxconvert/: api.py  cli.py  runner.py
fluxconvert/core/: models.py
fluxconvert/presets/: web-1080p.yaml
fluxconverter/: api.py  cli.py  runner.py
fluxconverter/core/: ffmpeg.py  hw.py
fluxconverter/gui/: app.py  app_old.py  main.py
fluxconverter/presets/: image-web.yaml
gui/: app.py
plugins/: __init__.py
presets/: __init__.py  image-web.yaml  web-1080p.yaml
scripts/: download_ai_tools.py  run.ps1  setup_ffmpeg.py
